# rust_ws

crates/hub/: Cargo.toml  build.rs
crates/hub/proto/: hub.proto  log.proto
crates/hub/src/: lib.rs  main.rs
